--- a/almurad-system/orders.html
+++ b/almurad-system/orders.html
@@ -379,37 +379,7 @@ td:nth-child(2), th:nth-child(2) {
     background:#FF6B2D;color:white;font-size:22px;box-shadow:0 3px 8px rgba(0,0,0,0.2);
   ">－</button>
 </div>
-
-  <div class="table-container">
-    <table>
-      <thead>
-        <tr>
-          <th>اختيار</th>
-          <th>#</th>
-          <th>تفاصيل</th>
-          <th>الكود</th>
-          <th>رقم الهاتف</th>
-          <th>الرقم الثاني</th>
-          <th>المحافظة</th>
-          <th>المنطقة</th>
-          <th>وصف العنوان</th>
-          <th>السعر</th>
-          <th>عدد القطع</th>
-          <th>اسم المنتج</th>
-          <th>الملاحظات</th>
-          <th>رقم الوصل</th>
-          <th>الحالة</th>
-          <th>تاريخ الطلب</th>
-          <th>المعلن</th>
-        </tr>
-      </thead>
-      <tbody id="ordersBody">
-        <tr><td colspan="17">⏳ جاري تحميل الطلبات...</td></tr>
-      </tbody>
-    </table>
-  </div>
-<!-- ✅ زر عرض المزيد — سهم صغير أسفل يسار الشاشة -->
-<button id="loadMoreBtn">⬇️</button>
+ <div id="ordersList"></div>
 
 
 <script type="module">
@@ -573,35 +543,33 @@ window.adjustStockOnStatusChange = async function (orderId, newStatus) {
     const variantId = variantKey.replace(/\s+/g, "_");
     const uniqueKey = `${orderId}_${name}_${variantId}`;
 
-    // ✅ الخصم عند قيد التوصيل (يسمح بالسالب)
-    if (newStatus === "قيد التوصيل" && !processed[`deduct_${uniqueKey}`]) {
-      if (foundKey && stock[foundKey] !== undefined) {
-        stock[foundKey] = (stock[foundKey] || 0) - qty; // ← السماح بالسالب
-        processed[`deduct_${uniqueKey}`] = true;
-        console.log(`📦 خصم ${qty} من ${name} (${foundKey}) = ${stock[foundKey]}`);
-      } else if (stock["إجمالي الكمية"] !== undefined) {
-        stock["إجمالي الكمية"] = (stock["إجمالي الكمية"] || 0) - qty; // ← السماح بالسالب
-        processed[`deduct_${uniqueKey}`] = true;
-        console.log(`📦 خصم ${qty} من ${name} (إجمالي الكمية) = ${stock["إجمالي الكمية"]}`);
-      } else {
-        showNotification(`🚫 المنتج "${name}" لا يحتوي على متغيرات أو إجمالي كميات.`, "#FF6B2D");
-      }
-    }
+  // ===============================
+//  🟩 نظام تحديث المخزون بدون رفض
+// ===============================
+if (newStatus === "قيد التوصيل" && !processed[`deduct_${uniqueKey}`]) {
 
-    // 🔁 الإرجاع عند تم استلام الراجع
-    if (newStatus === "تم استلام الراجع" && !processed[`return_${uniqueKey}`]) {
-      if (foundKey && stock[foundKey] !== undefined) {
-        stock[foundKey] += qty;
-        processed[`return_${uniqueKey}`] = true;
-        console.log(`🔁 إرجاع ${qty} إلى ${name} (${foundKey}) = ${stock[foundKey]}`);
-      } else if (stock["إجمالي الكمية"] !== undefined) {
-        stock["إجمالي الكمية"] += qty;
-        processed[`return_${uniqueKey}`] = true;
-        console.log(`🔁 إرجاع ${qty} إلى ${name} (إجمالي الكمية) = ${stock["إجمالي الكمية"]}`);
-      } else {
-        showNotification(`⚠️ لا يمكن إرجاع "${name}" لأن المنتج لا يحتوي على متغيرات.`, "#043B64");
-      }
-    }
+  // 🟢 1) إذا وجد متغير مطابق
+  if (foundKey && stock[foundKey] !== undefined) {
+    stock[foundKey] = (stock[foundKey] || 0) - qty;  // يسمح بالسالب
+    processed[`deduct_${uniqueKey}`] = true;
+    console.log(`📦 خصم ${qty} من ${name} (${foundKey}) = ${stock[foundKey]}`);
+  }
+
+  // 🟠 2) إذا لم يوجد متغير لكن يوجد إجمالي الكمية
+  else if (stock["إجمالي الكمية"] !== undefined) {
+    stock["إجمالي الكمية"] = (stock["إجمالي الكمية"] || 0) - qty;
+    processed[`deduct_${uniqueKey}`] = true;
+    console.log(`📦 خصم ${qty} من ${name} (إجمالي الكمية) = ${stock["إجمالي الكمية"]}`);
+  }
+
+  // 🔴 3) إذا لا يوجد أي مخزون → ننشئ إجمالي جديد ونخصم منه
+  else {
+    stock["إجمالي الكمية"] = -qty;  
+    processed[`deduct_${uniqueKey}`] = true;
+    console.log(`📦 إنشاء إجمالي جديد وخصم ${qty} لـ ${name} = -${qty}`);
+  }
+}
+
 
     // ♻️ إعادة حساب الإجمالي (يسمح بالسالب)
     totalQty = Object.values(stock).reduce((a, b) => a + (parseInt(b) || 0), 0);
@@ -657,6 +625,9 @@ if (!currentUser) {
 
     let allProducts = [];
     let allOrders = [];
+    window.allOrders = allOrders;
+window.__debugOrders = allOrders;
+
     const urlParams = new URLSearchParams(window.location.search);
     const currentStatus = decodeURIComponent(urlParams.get("status") || "");
 
@@ -688,8 +659,9 @@ onValue(ordersRef, (snapshot) => {
 
   const data = snapshot.val();
 
-// 🔹 تحويل البيانات إلى مصفوفة فقط (بدون أي تعديل)
 allOrders = Object.entries(data).map(([id, order]) => ({ id, ...order }));
+window.allOrders = allOrders; // ⬅️ تحديث النسخة العامة
+window.__debugOrders = allOrders;
 if (previousOrderCount && Object.keys(data).length > previousOrderCount) {
   const newRows = document.querySelectorAll("tr:first-child");
   newRows.forEach(row => {
@@ -725,6 +697,9 @@ if (!currentStatus) {
 });
 
 
+// ⬇️ هنا بالضبط السطرين
+window.allOrders = allOrders;
+window.__debugOrders = allOrders;
 // ✅ متغيرات العرض الجزئي
 let currentOrders = [];
 let currentIndex = 0;
@@ -1427,18 +1402,11 @@ renderOrdersPaginated(allOrders);
 
 
 
-    // 🗑 حذف المحددة
-    document.getElementById("deleteSelected").addEventListener("click", () => {
-    
-      const checked = Array.from(document.querySelectorAll("input[type='checkbox']:checked"));
-      if (checked.length === 0) return alert("لم يتم تحديد أي طلبات!");
-      if (!confirm("هل أنت متأكد من حذف الطلبات المحددة؟")) return;
-      checked.forEach(ch => remove(ref(db, `orders/${ch.dataset.id}`)));
-      alert("✅ تم حذف الطلبات المحددة بنجاح");
-    });
+// 🗑 مسح التكرارات حسب رقم الهاتف
+// يعمل على: الطلبات الجديدة + قيد المعالجة
 document.getElementById("deleteDuplicates").addEventListener("click", async () => {
 
-  if (!confirm("⚠️ هل أنت متأكد من حذف جميع التكرارات حسب رقم الهاتف؟")) return;
+  if (!confirm("⚠️ هل أنت متأكد من حذف التكرارات حسب رقم الهاتف؟")) return;
 
   const ordersRef = ref(db, "orders");
   const snap = await get(ordersRef);
@@ -1457,18 +1425,20 @@ document.getElementById("deleteDuplicates").addEventListener("click", async () =
     const phone = (order.phone1 || order.phone || "").trim();
     const status = (order.status || "").trim();
 
-    // فقط الطلبات الجديدة
-    const isNew = !status || status === "" || status === "غير محدد";
-    if (!isNew || !phone) continue;
+    // 🎯 الحالتين المطلوب تطبيق الحذف عليهن
+    const isTarget =
+      !status || status === "" || status === "غير محدد" || status === "قيد المعالجة";
+
+    if (!isTarget || !phone) continue;
 
     if (!seen[phone]) {
-      seen[phone] = id;   // أول طلب
+      seen[phone] = id;   // أول واحد
     } else {
-      duplicates.push(id); // نسخة مكررة
+      duplicates.push(id); // مكرر
     }
   }
 
-  // 🔥 مسح التكرارات دفعة واحدة (أسرع وبدون lag)
+  // 🔥 مسح التكرارات دفعة واحدة
   const updates = {};
   duplicates.forEach(id => {
     updates[`orders/${id}`] = null;
@@ -1476,8 +1446,9 @@ document.getElementById("deleteDuplicates").addEventListener("click", async () =
 
   await update(ref(db), updates);
 
-  alert(`🗑 تم حذف ${duplicates.length} طلب مكرر بالكامل.`);
+  alert(`🗑 تم حذف ${duplicates.length} طلب مكرر (جديد + قيد المعالجة).`);
 });
+
 
 
 
@@ -1639,8 +1610,32 @@ window.addEventListener("click", (e) => {
   if (!commandsBtn.contains(e.target)) commandsMenu.classList.remove("show");
 });
 
-// 🔄 تحديث الحالات من الوسيط
-// 🔄 تحديث الحالات من الوسيط (نسخة محسّنة)
+function debugOrderFailure(orderId, order, waseetStatus) {
+  console.group(`🚫 فشل تحديث حالة الطلب: ${orderId}`);
+
+  // 🛡 استخدام ?. حتى لا يصير خطأ إذا order = null
+  console.log("📌 رقم الطلب:", orderId);
+  console.log("📞 رقم الهاتف:", order?.phone1 || "❌ فارغ أو غير موجود");
+  console.log("📦 المنتج:", order?.productName || "❌ فارغ أو غير موجود");
+  console.log("📝 الحالة الحالية:", order?.status || "❌ فارغة");
+  console.log("🚚 حالة الوسيط:", waseetStatus || "❌ غير موجودة");
+  console.log("🔢 رقم الوصل:", order?.receiptNum || "❌ فارغ أو غير موجود");
+
+  // 🛡 تشخيص أسباب الفشل بدون لمس order مباشرة
+  if (!order) {
+    console.warn("⚠️ الطلب غير موجود داخل النظام (receiptNum غير مطابق)");
+  } else {
+    if (!order.receiptNum) console.warn("⚠️ ماكو رقم وصل داخل الطلب");
+    if (!order.productName) console.warn("⚠️ المنتج فارغ داخل الطلب");
+    if (!order.phone1) console.warn("⚠️ رقم الهاتف فارغ داخل الطلب");
+  }
+
+  if (!waseetStatus) console.warn("⚠️ الوسيط رجّع حالة فارغة");
+
+  console.groupEnd();
+}
+
+
 // 🔄 تحديث الحالات من الوسيط (Bulk - تحديث فوري دفعة واحدة)
 document.getElementById("updateStatuses").addEventListener("click", async () => {
   // 🟩 شريط الإشعارات
@@ -1733,36 +1728,52 @@ document.getElementById("updateStatuses").addEventListener("click", async () => 
     }
 
     let updatedCount = 0;
+for (const orderData of data.data) {
+  const apiStatus = (orderData.status || "").trim();
+  
+  const mappedStatus = statusMapping[apiStatus] || null;
+  
 
-    // 🔁 تحديث الطلبات كلها دفعة واحدة بالـ Firebase
-    for (const orderData of data.data) {
-      const apiStatus = (orderData.status || "").trim();
-      const mappedStatus = statusMapping[apiStatus] || null;
-      if (!mappedStatus) continue;
+  // 🔍 إذا حالة الوسيط غير موجودة في المابينگ
+  if (!mappedStatus) {
+    debugOrderFailure(orderData.id, null, apiStatus);
+    continue;
+  }
 
-      const targetOrder = allOrders.find(
-        o => (o.receiptNum || "").toString() === orderData.id.toString()
-      );
-      if (targetOrder) {
-        await update(ref(db, `orders/${targetOrder.id}`), {
-          status: mappedStatus
-        });
-        updatedCount++;
-  // ✅ خصم الكمية تلقائياً إذا تحولت الحالة إلى "قيد التوصيل"
+const targetOrder = allOrders.find(o =>
+  String(o.receiptNum || "").replace(/\s+/g, "") ===
+  String(orderData.id || "").replace(/\s+/g, "")
+);
+
+
+if (!targetOrder) {
+  console.warn("⚠️ الطلب غير موجود عبر رقم الوصل فقط:", orderData.id);
+  continue; // نكمل بدون ما نسوي شي
+}
+
+
+  // 🟢 تحديث الحالة
+  await update(ref(db, `orders/${targetOrder.id}`), {
+    status: mappedStatus
+  });
+  updatedCount++;
+
+  // 🧩 خصم المخزون إذا يتحول إلى “قيد التوصيل”
   if (mappedStatus === "قيد التوصيل" || mappedStatus === "تم استلام الراجع") {
     await adjustStockOnStatusChange(targetOrder.id, mappedStatus);
   }
 
-        if (apiStatus === "في موقع فرز بغداد") {
-          await update(ref(db, `orders/${targetOrder.id}`), {
-            notes:
-              (targetOrder.notes || "") +
-              (targetOrder.notes ? " | " : "") +
-              "تحولت من موقع فرز"
-          });
-        }
-      }
-    }
+  // 🌟 فقط حالة خاصة لفرز بغداد
+  if (apiStatus === "في موقع فرز بغداد") {
+    await update(ref(db, `orders/${targetOrder.id}`), {
+      notes:
+        (targetOrder.notes || "") +
+        (targetOrder.notes ? " | " : "") +
+        "تحولت من موقع فرز"
+    });
+  }
+}
+
 
     showMsg(`✅ تم تحديث ${updatedCount} طلب بنجاح.`, "#28a745");
     setTimeout(() => (statusBar.style.display = "none"), 3000);
