--- a/almurad-system/order-details.html
+++ b/almurad-system/order-details.html
@@ -531,7 +531,9 @@ window.addEventListener("popstate", () => {
 });
 
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
-    import { getDatabase, ref, get, update, onValue } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js";
+   import { getDatabase, ref, get, update, onValue, set }
+from "https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js";
+
     import { citiesData, allCities } from "./citiesData.js";
 
     const firebaseConfig = {
@@ -608,6 +610,84 @@ if (!orderId) {
       wrapper.appendChild(dropdown);
       return wrapper;
     }
+async function loadVariants(productName) {
+  const variantsContainer = document.getElementById("variantsContainer");
+  variantsContainer.innerHTML = "";
+
+  const snap = await get(ref(db, "warehouse"));
+  if (!snap.exists()) return;
+
+  const allProducts = snap.val();
+  const productData = allProducts[productName];
+  if (!productData || !productData.stock) return;
+
+  const stock = productData.stock;
+  const activeKeys = Object.keys(stock).filter(k => k !== "إجمالي الكمية" && stock[k] > 0);
+  if (activeKeys.length === 0) return;
+
+  const savedVariantsSnap = await get(ref(db, `orders/${orderId}/selectedVariants`));
+  const savedVariants = savedVariantsSnap.exists() ? savedVariantsSnap.val() : {};
+
+  const variantsMap = {};
+  activeKeys.forEach(key => {
+    const parts = key.split("|").map(s => s.trim());
+    for (let i = 0; i < parts.length; i += 2) {
+      const name = parts[i];
+      const val = parts[i + 1];
+      if (!variantsMap[name]) variantsMap[name] = new Set();
+      variantsMap[name].add(val);
+    }
+  });
+
+  const variantNames = Object.keys(variantsMap);
+  let selected = { ...savedVariants };
+
+  function renderDropdown(level = 0) {
+    Array.from(variantsContainer.querySelectorAll(".variant-group"))
+      .slice(level)
+      .forEach(el => el.remove());
+
+    const name = variantNames[level];
+    if (!name) return;
+
+    const filteredKeys = activeKeys.filter(key =>
+      Object.entries(selected).every(([k, v]) => key.includes(`${k} | ${v}`))
+    );
+
+    const availableVals = new Set();
+    filteredKeys.forEach(key => {
+      const parts = key.split("|").map(s => s.trim());
+      for (let i = 0; i < parts.length; i += 2) {
+        const k = parts[i], val = parts[i + 1];
+        if (k === name) availableVals.add(val);
+      }
+    });
+
+    if (availableVals.size === 0) return;
+
+    const wrapper = document.createElement("div");
+    wrapper.className = "variant-group field single";
+
+    const label = document.createElement("label");
+    label.textContent = `${name}:`;
+    wrapper.appendChild(label);
+
+    const dropdown = createDropdown(
+      [...availableVals],
+      selected[name] || "",
+      val => {
+        selected[name] = val;
+        update(ref(db, `orders/${orderId}/selectedVariants`), selected);
+        renderDropdown(level + 1);
+      }
+    );
+
+    wrapper.appendChild(dropdown);
+    variantsContainer.appendChild(wrapper);
+  }
+
+  renderDropdown(0);
+}
 
 
 
@@ -831,10 +911,23 @@ if (phone) {
   
   callBtn.href = `tel:${phone}`;
 
-  let normalizedPhone = phone.replace(/[^\d]/g, '').replace(/^0+/, '');
-  if (!normalizedPhone.startsWith('964')) normalizedPhone = '964' + normalizedPhone;
-  
-waBtn.setAttribute("href", `https://api.whatsapp.com/send?phone=${normalizedPhone}`);
+let normalizedPhone = phone.replace(/[^\d]/g, '');
+
+if (normalizedPhone.startsWith("00964")) {
+  normalizedPhone = normalizedPhone.replace("00964", "964");
+}
+else if (normalizedPhone.startsWith("964")) {
+  // يبقى كما هو
+}
+else if (normalizedPhone.startsWith("0")) {
+  normalizedPhone = "964" + normalizedPhone.substring(1);
+}
+else {
+  normalizedPhone = "964" + normalizedPhone;
+}
+
+waBtn.href = `https://api.whatsapp.com/send?phone=${normalizedPhone}`;
+
 waBtn.setAttribute("target", "_blank");
 waBtn.setAttribute("rel", "noopener noreferrer");
 
@@ -856,100 +949,32 @@ waBtn.setAttribute("rel", "noopener noreferrer");
       const areas = citiesData[data.city] || [];
       const areaDropdown = createDropdown(areas, data.area || "", val => update(ref(db, `orders/${orderId}`), { area: val }));
       areaDiv.appendChild(areaDropdown);
-async function loadVariants(productName) {
-  const variantsContainer = document.getElementById("variantsContainer");
-  variantsContainer.innerHTML = "";
-
-  const snap = await get(ref(db, "warehouse"));
-  if (!snap.exists()) return;
-
-  const allProducts = snap.val();
-  const productData = allProducts[productName];
-  if (!productData || !productData.stock) return;
-
-  const stock = productData.stock;
-  const activeKeys = Object.keys(stock).filter(k => k !== "إجمالي الكمية" && stock[k] > 0);
-  if (activeKeys.length === 0) return;
-
-  const savedVariantsSnap = await get(ref(db, `orders/${orderId}/selectedVariants`));
-  const savedVariants = savedVariantsSnap.exists() ? savedVariantsSnap.val() : {};
-
-  const variantsMap = {};
-  activeKeys.forEach(key => {
-    const parts = key.split("|").map(s => s.trim());
-    for (let i = 0; i < parts.length; i += 2) {
-      const name = parts[i];
-      const val = parts[i + 1];
-      if (!variantsMap[name]) variantsMap[name] = new Set();
-      variantsMap[name].add(val);
-    }
-  });
-
-  const variantNames = Object.keys(variantsMap);
-  let selected = { ...savedVariants };
-
-  function renderDropdown(level = 0) {
-    Array.from(variantsContainer.querySelectorAll(".variant-group"))
-      .slice(level)
-      .forEach(el => el.remove());
-
-    const name = variantNames[level];
-    if (!name) return;
-
-    const filteredKeys = activeKeys.filter(key =>
-      Object.entries(selected).every(([k, v]) => key.includes(`${k} | ${v}`))
-    );
-
-    const availableVals = new Set();
-    filteredKeys.forEach(key => {
-      const parts = key.split("|").map(s => s.trim());
-      for (let i = 0; i < parts.length; i += 2) {
-        const k = parts[i], val = parts[i + 1];
-        if (k === name) availableVals.add(val);
-      }
-    });
-
-    if (availableVals.size === 0) return;
-
-    const wrapper = document.createElement("div");
-    wrapper.className = "variant-group field single";
-
-    const label = document.createElement("label");
-    label.textContent = `${name}:`;
-    wrapper.appendChild(label);
-
-    const dropdown = createDropdown(
-      [...availableVals],
-      selected[name] || "",
-      val => {
-        selected[name] = val;
-        update(ref(db, `orders/${orderId}/selectedVariants`), selected);
-        renderDropdown(level + 1);
-      }
-    );
-
-    wrapper.appendChild(dropdown);
-    variantsContainer.appendChild(wrapper);
-  }
-
-  renderDropdown(0);
-}
-
       // المنتج الرئيسي
       const productDiv = document.getElementById("product");
 // ✅ لو المنتج مو موجود بالقائمة نضيفه مؤقتاً
 if (data.productName && !allProducts.includes(data.productName)) {
   allProducts.unshift(data.productName);
 }
+const productDropdown = createDropdown(
+  allProducts,
+  data.productName || "",
+  async val => {
 
-const productDropdown = createDropdown(allProducts, data.productName || "", val => {
-  update(ref(db, `orders/${orderId}`), { productName: val });
-  loadVariants(val);
-});
-// ✅ تحميل المتغيرات تلقائياً عند فتح الطلب إذا المنتج معروف
-if (data.productName) {
-  loadVariants(data.productName);
-}
+    // 1) تحديث اسم المنتج
+    await update(ref(db, `orders/${orderId}`), { productName: val });
+
+    // 2) تصفير متغيرات المنتج القديم داخل الطلب (🔥 أهم نقطة)
+    await set(ref(db, `orders/${orderId}/selectedVariants`), {});
+
+    // 3) مسح المتغيرات من الواجهة
+    document.getElementById("variantsContainer").innerHTML = "";
+
+    // 4) تحميل متغيرات المنتج الجديد
+    loadVariants(val);
+  }
+);
+
+
 
       productDiv.appendChild(productDropdown);
 
@@ -1035,10 +1060,15 @@ async function saveStatus(val) {
 setupStatusDropdown(data.status || "");
 
 
-      // تحميل المنتجات الإضافية القديمة (إن وجدت)
-      if (data.extraProducts && Array.isArray(data.extraProducts)) {
-        data.extraProducts.forEach(p => addExtraProduct(p));
-      }
+   // 🛑 منع التكرار — تنظيف المصفوفة قبل التحميل
+extraProducts = [];
+document.getElementById("extraProducts").innerHTML = "";
+
+// 🟢 تحميل المنتجات الإضافية مرة واحدة فقط
+if (data.extraProducts && Array.isArray(data.extraProducts)) {
+  data.extraProducts.forEach(p => addExtraProduct(p));
+}
+
     }
   // ✅ حفظ القيم الأصلية لكل الحقول للمقارنة لاحقاً
   ["code","phone1","phone2","address","price","quantity","notes","advertiser"].forEach(id => {
@@ -1080,11 +1110,12 @@ document.getElementById("saveBtn").addEventListener("click", async () => {
     }
 
     notesArray.push(`${mainProduct.name} ×${mainProduct.qty}${varsText}`);
-    productsDetailed.push({
-      name: mainProduct.name,
-      qty: mainProduct.qty,
-      variants: variantsObj
-    });
+productsDetailed.push({
+  name: mainProduct.name,
+  qty: mainProduct.qty,
+  price: mainProduct.price,  // 🔥 السعر مال المنتج الرئيسي
+  variants: variantsObj
+});
   }
 
   // المنتجات الإضافية
@@ -1106,41 +1137,78 @@ document.getElementById("saveBtn").addEventListener("click", async () => {
     }
 
     notesArray.push(`${p.name} ×${p.qty}${varsText}`);
-    productsDetailed.push({
-      name: p.name,
-      qty: p.qty,
-      variants: varsObj
-    });
+   productsDetailed.push({
+  name: p.name,
+  qty: p.qty,
+  price: p.price,  // 🔥 السعر مال كل منتج إضافي
+  variants: varsObj
+});
+
   });
+  
+// 🔥 تنظيف المنتجات الفارغة
+const cleanedDetails = productsDetailed.filter(p => p.name && p.name.trim() !== "");
 
-  const finalNotes = notesArray.join(" | ");
+// 🔥 جمع السعر الكلي (بدون ضرب)
+const totalPrice = cleanedDetails.reduce((sum, item) => {
+  return sum + (Number(item.price) || 0);
+}, 0);
 
-  const extraQty = extraProducts.reduce((sum, p) => sum + (p.qty || 0), 0);
-  const extraTotal = extraProducts.reduce((sum, p) => sum + (p.price || 0), 0);
+// 🔥 جمع أسماء المنتجات — فقط الرئيسية + الإضافية بدون تكرار
+const finalProductName = [
+  ...new Set(cleanedDetails.map(item => item.name.trim()))
+].join("، ");
 
-  const totalQty = mainProduct.qty + extraQty;
-  const totalPrice = mainProduct.price + extraTotal;
+// 🔥 جمع الكمية الكلية
+const totalQty = cleanedDetails.reduce((sum, item) => {
+  return sum + (Number(item.qty) || 0);
+}, 0);
 
-  const combinedProductNames = [];
-  if (mainProduct.name) combinedProductNames.push(mainProduct.name);
-  extraProducts.forEach(p => combinedProductNames.push(p.name));
 
-  const finalProductName = combinedProductNames.join("، ");
+// ⭐ 1 — الملاحظات التلقائية الجديدة
+const autoNotes = notesArray.join(" | ").trim();
 
-  const updates = {
-    code: document.getElementById("code").value.trim(),
-    phone1: document.getElementById("phone1").value.trim(),
-    phone2: document.getElementById("phone2").value.trim(),
-    address: document.getElementById("address").value.trim(),
-    productName: finalProductName,
-    notes: finalNotes,
-    advertiser: document.getElementById("advertiser").value.trim(),
-    price: totalPrice,
-    quantity: totalQty,
-    extraProducts: extraProducts,
-    selectedVariants: mainVariants,
-    productsDetailed: productsDetailed
-  };
+// ⭐ 2 — الملاحظات القديمة المكتوبة يدويًا فقط (نحذف أي ملاحظات تلقائية سابقة)
+let userNotes = document.getElementById("notes").value.trim();
+
+// نحذف أي سطر يحتوي (× أو : أو |) لأنها من الملاحظات التلقائية
+userNotes = userNotes
+  .split("||")
+  .map(p => p.trim())
+  .filter(p => p && !p.includes("×") && !p.includes(":") && !p.includes("|"))
+  .join(" || ")
+  .trim();
+
+// ⭐ 3 — دمج التلقائي + اليدوي مرة واحدة فقط بدون تكرار
+let finalNotes = autoNotes;
+if (userNotes) {
+  finalNotes += " || " + userNotes;
+}
+
+
+
+const updates = {
+  code: document.getElementById("code").value.trim(),
+  phone1: document.getElementById("phone1").value.trim(),
+  phone2: document.getElementById("phone2").value.trim(),
+  address: document.getElementById("address").value.trim(),
+
+productName: mainProduct.name,   // فقط الرئيسي
+totalProducts: finalProductName, // المنتج الرئيسي + الإضافيين
+  totalPrice: totalPrice,
+  totalQty: totalQty,
+
+  notes: finalNotes,
+  advertiser: document.getElementById("advertiser").value.trim(),
+
+  price: mainProduct.price,
+  quantity: mainProduct.qty,
+
+  extraProducts: extraProducts,
+  selectedVariants: mainVariants,
+  productsDetailed: productsDetailed
+};
+
 
   // 🔥 حفظ الطلب
   await update(ref(db, `orders/${orderId}`), updates);
@@ -1492,4 +1560,4 @@ function showToast(msg) {
 </div>
 
 </body>
-</html>  
+</html> 
